[tool.poetry]
name = "app"
version = "0.0.0"
description = "Documentation for Bink's Wonderful APIs"
authors = ["DevOps <devops@bink.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
ruff = "^0.0.249"

[tool.poetry.scripts]
docs = "app.cli:cli"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
